@@ -1,3 +1,8 @@
+Thu Mar 22 11:25:49 2012  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/funclib.c: remove some redundant code, load the exp for
+	  matrices lazily
+
 Wed Mar 21 15:39:04 2012  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/*.[ch]: mark a bunch of functions as pure.  Probably doesn't
